--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -109,24 +109,33 @@
     class="flex justify-between items-center w-11/12 h-full my-0 mx-auto text-lg"
   >
     <!-- links: logo, how, about -->
-    <ul class="flex justify-start items-center h-20">
-      <li class="mr-10 cursor-pointer opacity-70 hover:opacity-100">
+    <ul class="flex w-full justify-between items-center h-20">
+      <li class="cursor-pointer opacity-70 hover:opacity-100">
         <a href="{% url 'dashboard_page' %}">
-          {% include 'icons/mainlogo.html' with class="w-32 h-32"%}
+          {% include 'icons/mainlogo.html' with class="w-16 h-16"%}
         </a>
       </li>
-      <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
-        <a href="{% url 'landing_page' %}#about_us">About Us</a>
-      </li>
-      <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
-        <a href="{% url 'landing_page' %}#how_it_works">How it Works</a>
-      </li>
-      <li class="mx-10 cursor-pointer opacity-100">
+      <li class="px-10 md:px-0 cursor-pointer opacity-100 flex-1 md:grow-0">
         {% include 'components/search_bar.html' %}
+      </li>
+      <li class="cursor-pointer block md:hidden" id="menu">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline-block" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"/>
+        </svg>
       </li>
     </ul>
     <!-- end of links -->
   </div>
   <!-- end of container -->
-  {% endif %} 
+  {% endif %}
+  <script>
+    const menu = $("#menu");
+    function toggleMenu() {
+      const sidemenu = $("#sidemenu");
+      sidemenu.toggleClass("hidden");
+      sidemenu.toggleClass("-top-0");
+      sidemenu.toggleClass("top-20");
+    }
+    menu.click(toggleMenu);
+  </script>
 </nav>
