commit to store changes prior to pull

--- a/templates/app/manage_experiences.html
+++ b/templates/app/manage_experiences.html
@@ -115,6 +115,6 @@
     <input type="hidden" name="names" id="dexp_names">
   </form>
 </div>
-{% include "app/experience_form.html" %}
+{% include "components/experience_form/experience_form.html" %}
 <script src="{% static 'js/manage_exp.js' %}"></script>
 {% endblock %}
