--- a/templates/components/experience_form/experience_form.html
+++ b/templates/components/experience_form/experience_form.html
@@ -15,22 +15,7 @@
                 class="modal-content border-4 shadow-lg relative flex 
                 flex-col h-full pointer-events-auto bg-clip-padding 
                 rounded-md outline-none text-current">
-                <div
-                    class="
-                    modal-header flex flex-shrink-0 items-center justify-between 
-                    p-4 border-b border-gray-200 rounded-t-md">
-                    <h5 
-                        class="text-xl font-medium leading-normal" 
-                        id="exampleModalLabel">
-                        Experience Input
-                    </h5>
-                    <svg id="nsb_close" xmlns="http://www.w3.org/2000/svg" 
-                    class="h-6 w-6 cursor-pointer text-gray-500 hover:text-white" 
-                    onclick="modalCloseBehaviour('experience-input-modal')"
-                    fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-                    </svg>
-                </div>
+                {% include "components/experience_form/modal_header.html" %}
                 <div class="w-full h-full pt-3 overflow-hidden block whitespace-nowrap">
                     {% comment %} Add overflow hidden to this parent {% endcomment %}
                     {% comment %} then in js prev/next translates ALL exp-tabs by width of parent component? {% endcomment %}
