more intermediate changes for refactoring

--- a/templates/app/other_user_profile.html
+++ b/templates/app/other_user_profile.html
@@ -116,8 +116,8 @@
         </div>
         {% endfor %}
       </div>
-
-      {% include 'app/experience_display.html' %}
+{% comment %} 
+      {% include 'components/experience_display.html' %} {% endcomment %}
 </div>
 
 {% endblock content %}
