--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
       {% include "components/navbar.html"%}
     {% endblock nav %}
 
-    {% include "app/experience_display.html" %}
+    {% include "components/experience_display.html" %}
 
     {% block content %}
 
