--- a/templates/components/experience_form/experience_form.html
+++ b/templates/components/experience_form/experience_form.html
@@ -1,5 +1,9 @@
 {% block content %}
-<form action="/experience-input" method="post" id="experience-form">
+{% if method %}
+<form action="/experience-input" method={{method}} id="experience-form">
+{% else %}
+<form action="/experience-input" method="POST" id="experience-form">
+{% endif %}
     {% csrf_token %}
     <div 
         class = "
