--- a/templates/components/experience_form/tab3.html
+++ b/templates/components/experience_form/tab3.html
@@ -1,6 +1,6 @@
 <div>
     <!-- Skill Selection -->
-    <div class="fieldWrapper input-container">
+    <div class="fieldWrapper input-text-container">
         {{ experience_input_form.skills.errors }}
         <div class="input-label absolute top-[-18px]">Skills Involved:</div>
         {{ experience_input_form.skills }}
