--- a/static/css/tailwind.src.css
+++ b/static/css/tailwind.src.css
@@ -178,6 +178,10 @@
     @apply relative w-fit p-4 mt-4 mb-2 mx-2;
   }
 
+  .input-text-container {
+    @apply relative w-full p-4 mt-4 mb-2;
+  }
+
   .input {
     @apply 
     p-2 bg-transparent outline-none border-gray-500 rounded-xl border-solid border-2 transition-colors duration-150 
@@ -192,9 +196,6 @@
 
     top: -17%;
   }
-
-  
-
 }
 
 @tailwind utilities;
