fixed merge issues

--- a/templates/app/manage_desired_skills.html
+++ b/templates/app/manage_desired_skills.html
@@ -6,9 +6,9 @@
 {% endblock headers %}
 
 {% block content %}
-<div class="grid grid-cols-12 h-[calc(100%_-_80px)]">
+<div class="flex h-[calc(100%_-_80px)]">
   {% include 'components/sidemenu.html' %}
-  <div class="col-span-10">
+  <div class="w-full">
     <div class="py-4 px-9 flex items-center justify-between">
       <h3>All Desired Skills</h3>
       <div>
