--- a/templates/components/project_list.html
+++ b/templates/components/project_list.html
@@ -7,12 +7,12 @@
 {% endblock headers %}
 
 {% block content %}
-<div class="grid grid-cols-12 h-[calc(100%_-_80px)]">
+<div class="flex h-[calc(100%_-_80px)]">
     <div class="col-span-2">
         {% include "components/sidemenu.html" %}
     </div>
     
-    <div id="treeContainer" class="col-span-10 h-full bg-background">
+    <div id="treeContainer" class="w-full h-full bg-background">
         <div class='h-[90%]'>
             <div 
             class=
