--- a/templates/components/sidemenu.html
+++ b/templates/components/sidemenu.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 {% comment %} sidemenu wrapper spans two cols in grid {% endcomment %}
-<div class="w-screen md:w-72 h-full bg-darker-blue pl-5 pr-2 grow-0 shrink-0 fixed -top-0 z-10 hidden transition-all md:relative md:block col-span-2" id="sidemenu">
+<div class="w-screen md:w-72 h-full bg-darker-blue pl-5 pr-2 grow-0 shrink-0 fixed -top-0 z-10 hidden transition-all md:relative md:block" id="sidemenu">
 
   {% comment %} user part {% endcomment %}
 
